position fixed, z-index not working

--- a/css/main.css
+++ b/css/main.css
@@ -193,6 +193,66 @@ button:hover {
   color: #d3ab55;
 }
 
+.navbar {
+  position: relative;
+  z-index: 2000;
+}
+
+.navbar-navigation {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.navbar-navigation-left {
+  width: 50vw;
+  height: 100vh;
+  background-color: #262626;
+  position: fixed;
+  left: 0;
+}
+
+.navbar-navigation-right {
+  width: 50vw;
+  height: 100vh;
+  background-color: #1f1d1d;
+  position: fixed;
+  right: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.left-image {
+  width: 50%;
+  position: absolute;
+  -webkit-box-shadow: 0 15px 60px rgba(0, 0, 0, 0.4);
+          box-shadow: 0 15px 60px rgba(0, 0, 0, 0.4);
+  opacity: 0.7;
+  border-radius: 10px;
+}
+
+.left-image-1 {
+  top: 15%;
+  left: 15%;
+}
+
+.left-image-2 {
+  top: 35%;
+  left: 25%;
+}
+
+.left-image-3 {
+  top: 55%;
+  left: 35%;
+}
+
 .logo {
   font-size: 70px;
   color: #d3ab55;
@@ -302,5 +362,29 @@ img.card {
   font-weight: 300;
   letter-spacing: 2px;
   text-transform: capitalize;
+}
+
+.nav-list-item {
+  list-style: none;
+}
+
+.nav-list-link {
+  font-family: "Dancing Script", cursive;
+  font-size: 50px;
+  font-weight: 300;
+  letter-spacing: 2px;
+  text-transform: capitalize;
+  color: #bbb;
+  text-decoration: none;
+  display: block;
+  margin: 20px;
+  text-align: center;
+  -webkit-transition: all 0.5s;
+  transition: all 0.5s;
+}
+
+.nav-list-link:hover {
+  color: #d3ab55;
+  letter-spacing: 4px;
 }
 /*# sourceMappingURL=main.css.map */
