--- a/scss/_components.scss
+++ b/scss/_components.scss
@@ -95,3 +95,28 @@ img.card {
     @include textStyles(capitalize);
   }
 }
+
+.nav-list {
+  &-item {
+    list-style: none;
+  }
+
+  &-link {
+    font-family: $font-dancingScript;
+    font-size: 50px;
+    @include textStyles(capitalize);
+    color: $color-secondary;
+    text-decoration: none;
+
+    // links are by deafult inline, so to add margin, need to make them block
+    display: block;
+    margin: 20px;
+    text-align: center;
+    transition: all 0.5s;
+
+    &:hover {
+      color: $color-primary;
+      letter-spacing: 4px;
+    }
+  }
+}
